--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1657,7 +1657,7 @@
   padding-bottom: 4px!important
 }
 @media (hover:hover) {
-  .explore-click:hover {
+  .text-link:hover {
     cursor: pointer!important;
     color: #000!important;
     text-decoration: underline!important
