--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4324,7 +4324,7 @@ select[disabled] {
   color: #ddd !important;
   text-decoration: none !important;
 }
-.link-underline {
+.text-link {
   font-size: inherit !important;
   font-family: inherit !important;
   font-style: inherit !important;
@@ -4337,37 +4337,37 @@ select[disabled] {
   text-align: inherit !important;
   outline: 0 !important;
 }
-.link-underline:focus {
+.text-link:focus {
   color: inherit !important;
   text-decoration: underline !important;
 }
-.link-underline:visited {
+.text-link:visited {
   color: #222 !important;
   text-decoration: underline !important;
 }
 @media (hover: hover) {
-  .link-underline:hover {
+  .text-link:hover {
     cursor: pointer !important;
     color: #000 !important;
     text-decoration: underline !important;
   }
 }
-.link-underline:active {
+.text-link:active {
   color: #717171 !important;
   text-decoration: underline !important;
 }
-.link-underline::-moz-focus-inner {
+.text-link::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-.link-underline:focus::-moz-focus-inner {
+.text-link:focus::-moz-focus-inner {
   border: none !important;
 }
-.link-underline:-moz-focusring {
+.text-link:-moz-focusring {
   outline: 0 !important;
 }
-.link-underline:focus-visible {
+.text-link:focus-visible {
   color: #222 !important;
   text-decoration: underline !important;
   -webkit-transition: box-shadow 0.2s !important;
@@ -4376,17 +4376,17 @@ select[disabled] {
   box-shadow: 0 0 0 2px #fff, 0 0 0 4px #222 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  .link-underline:focus-visible {
+  .text-link:focus-visible {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-.link-underline:disabled {
+.text-link:disabled {
   color: #ddd !important;
   text-decoration: underline !important;
 }
-.link-underline:disabled:hover {
+.text-link:disabled:hover {
   text-decoration: underline !important;
 }
 .link {
@@ -15345,7 +15345,7 @@ fieldset[disabled] .btn {
   padding-bottom: 4px !important;
 }
 @media (hover: hover) {
-  .explore-click:hover {
+  .text-link:hover {
     cursor: pointer !important;
     color: #000 !important;
     text-decoration: underline !important;
