--- a/src/css/components/tooltip.css
+++ b/src/css/components/tooltip.css
@@ -1,4 +1,6 @@
-/* Tooltip */
+/*! ------------------- */
+/*! Tooltip component   */
+/*! ------------------- */
 .tooltip {
   z-index: 3000;
   max-width: 280px;
@@ -41,4 +43,93 @@
   z-index: -1;
   display: none;
 }
-/* /Tooltip */
+.tooltip-dark {
+  -webkit-box-align: center !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  display: flex !important;
+  align-items: center !important;
+  background: #222 !important;
+  border-radius: 8px !important;
+  box-shadow: rgb(0 0 0 / 28%) 0 8px 28px !important;
+  color: #fff !important;
+  padding: 16px !important;
+  text-align: left !important;
+  white-space: pre-line !important;
+  opacity: 1 !important;
+  transition: opacity 0.3s linear !important;
+  z-index: 101 !important;
+}
+.tooltip-dark:is(*)[data-popper-placement^='right'] [data-popper-arrow] {
+  left: -5px !important;
+}
+.tooltip-dark:is(*)[data-popper-placement^='bottom'] [data-popper-arrow] {
+  top: -5px !important;
+}
+.tooltip-dark:is(*)[data-popper-placement^='left'] [data-popper-arrow] {
+  right: -5px !important;
+}
+.tooltip-dark:is(*)[data-popper-placement^='top'] [data-popper-arrow] {
+  bottom: -5px !important;
+}
+.tooltip-dark-arrow {
+  width: 20px !important;
+  height: 20px !important;
+  position: absolute !important;
+  z-index: -1 !important;
+}
+.tooltip-dark-arrow::before {
+  background: #222 !important;
+  border-radius: 2px !important;
+  content: '' !important;
+  position: absolute !important;
+  width: 20px !important;
+  height: 20px !important;
+  -webkit-transform: rotate(45deg) !important;
+  -ms-transform: rotate(45deg) !important;
+  transform: rotate(45deg) !important;
+  z-index: -1 !important;
+  opacity: 1 !important;
+  transition: opacity 0.3s linear !important;
+}
+.tooltip-close {
+  -webkit-box-align: center !important;
+  -webkit-box-flex: 0 !important;
+  flex-grow: 0 !important;
+  display: flex !important;
+  align-items: center !important;
+  height: 18px !important;
+  margin-left: 8px !important;
+  align-self: flex-start !important;
+}
+.tooltip-close-btn {
+  border: none !important;
+  height: 16px !important;
+  width: 16px !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  position: relative !important;
+  background: 0 0 !important;
+  border-radius: 50% !important;
+  color: #fff !important;
+  outline: 0 !important;
+}
+.tooltip-close-btn:focus-visible {
+  transition: box-shadow 0.2s !important;
+  box-shadow: none !important;
+}
+.tooltip-close-btn::before {
+  content: '' !important;
+  display: block !important;
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  width: 24px !important;
+  height: 24px !important;
+  border-radius: 50% !important;
+  transition: box-shadow 0.2s !important;
+}
+.tooltip-close-btn:focus-visible::before {
+  box-shadow: rgb(255 255 255 / 80%) 0 0 0 2px !important;
+}
